# web-services-2022

./: .gitignore  README.md  pyproject.toml  setup.cfg
diffusion/: apps.py  urls.py  views.py
diffusion/templates/: form.html
django_project/: settings.py  urls.py
