[tool.poetry]
name = "web-services-2022"
version = "2022.09"
description = "practice 1"
authors = ["Azat Sibagatulin <sibagatulin.azat@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_services_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
