[tool.poetry]
name = "web-services-2022"
version = "2022.09"
description = "practice 1"
authors = ["Azat Sibagatulin <sibagatulin.azat@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "web_services_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
pytest-coverage = "^0.0"
pytest-factoryboy = "^2.5.0"
snapshottest = "^0.6.0"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
